--- a/app/index.html
+++ b/app/index.html
@@ -93,6 +93,38 @@
         <div class="container"> 
                 <h2 class="title">EXPERTISE</h2>
                 <p class = "expertise-p">Lorem ipsum dolor sit amet proin gravida nibh vel velit</p>
+         <div class="expertise_block">
+         		  <div class="expertise_block_item">
+         		  	<img src="img/expertise/icon1.png" alt="">
+         		  	<h3 class="title">WEB DESIGN & DEVELOPMENT</h3>
+         		  	<p class = "block_item_p">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
+         		  </div>
+         			<div class="expertise_block_item">
+         				<img class = "brush" src="img/expertise/icon2.png" alt="">
+         				<h3 class="title">BRANDING IDENTITY</h3>
+         				<p class = "block_item_p">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
+         			</div>
+         			<div class="expertise_block_item">
+         				<img src="img/expertise/icon3.png" alt="">
+         				<h3 class="title">MOBILE APP</h3>
+         				<p class = "block_item_p">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
+         			</div>
+         			<div class="expertise_block_item">
+         				<img src="img/expertise/icon4.png" alt="">
+         				<h3 class="title">SEARCH ENGINE OPTIMIZATION</h3>
+         				<p class = "block_item_p">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
+         			</div>
+         			<div class="expertise_block_item">
+         				<img src="img/expertise/icon5.png" alt="">
+         				<h3 class="title">GAME DEVELOPMENT</h3>
+         				<p class = "block_item_p">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
+         			</div>
+         			<div class="expertise_block_item">
+         				<img src="img/expertise/icon6.png" alt="">
+         				<h3 class="title">MADE WITH LOVE</h3>
+         				<p class= "block_item_p">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
+         			</div>	
+         </div>     
         </div>
     </section>
     <link rel="stylesheet" href="css/main.min.css">
