--- a/app/index.html
+++ b/app/index.html
@@ -90,42 +90,85 @@
         </div>
     </section>
     <section class="expertise white">
-        <div class="container"> 
-                <h2 class="title">EXPERTISE</h2>
-                <p class = "expertise-p">Lorem ipsum dolor sit amet proin gravida nibh vel velit</p>
-         <div class="expertise_block">
-         		  <div class="expertise_block_item">
-         		  	<img src="img/expertise/icon1.png" alt="">
-         		  	<h3 class="title">WEB DESIGN & DEVELOPMENT</h3>
-         		  	<p class = "block_item_p">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
-         		  </div>
-         			<div class="expertise_block_item">
-         				<img class = "brush" src="img/expertise/icon2.png" alt="">
-         				<h3 class="title">BRANDING IDENTITY</h3>
-         				<p class = "block_item_p">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
-         			</div>
-         			<div class="expertise_block_item">
-         				<img src="img/expertise/icon3.png" alt="">
-         				<h3 class="title">MOBILE APP</h3>
-         				<p class = "block_item_p">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
-         			</div>
-         			<div class="expertise_block_item">
-         				<img src="img/expertise/icon4.png" alt="">
-         				<h3 class="title">SEARCH ENGINE OPTIMIZATION</h3>
-         				<p class = "block_item_p">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
-         			</div>
-         			<div class="expertise_block_item">
-         				<img src="img/expertise/icon5.png" alt="">
-         				<h3 class="title">GAME DEVELOPMENT</h3>
-         				<p class = "block_item_p">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
-         			</div>
-         			<div class="expertise_block_item">
-         				<img src="img/expertise/icon6.png" alt="">
-         				<h3 class="title">MADE WITH LOVE</h3>
-         				<p class= "block_item_p">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
-         			</div>	
-         </div>     
+        <div class="container">
+            <h2 class="title">EXPERTISE</h2>
+            <p class="expertise-p">Lorem ipsum dolor sit amet proin gravida nibh vel velit</p>
+            <div class="expertise_block">
+                <div class="expertise_block_item">
+                    <img src="img/expertise/icon1.png" alt="">
+                    <h3 class="title">WEB DESIGN & DEVELOPMENT</h3>
+                    <p class="block_item_p">This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
+                </div>
+                <div class="expertise_block_item">
+                    <img class="brush" src="img/expertise/icon2.png" alt="">
+                    <h3 class="title">BRANDING IDENTITY</h3>
+                    <p class="block_item_p">This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
+                </div>
+                <div class="expertise_block_item">
+                    <img src="img/expertise/icon3.png" alt="">
+                    <h3 class="title">MOBILE APP</h3>
+                    <p class="block_item_p">This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
+                </div>
+                <div class="expertise_block_item">
+                    <img src="img/expertise/icon4.png" alt="">
+                    <h3 class="title">SEARCH ENGINE OPTIMIZATION</h3>
+                    <p class="block_item_p">This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
+                </div>
+                <div class="expertise_block_item">
+                    <img src="img/expertise/icon5.png" alt="">
+                    <h3 class="title">GAME DEVELOPMENT</h3>
+                    <p class="block_item_p">This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
+                </div>
+                <div class="expertise_block_item">
+                    <img src="img/expertise/icon6.png" alt="">
+                    <h3 class="title">MADE WITH LOVE</h3>
+                    <p class="block_item_p">This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
+                </div>
+            </div>
         </div>
+    </section>
+    <section class="team purple dark" style="background: url(img/team-section-background.jpg">
+        <div class="container">
+            <div class="title_block">
+                <div class="team_item_text">
+                    <h2 class="title">MEET OUR AMAZING TEAM</h2>
+                    <p calss>Lorem ipsum dolor sit amet proin gravida nibh vel velit</p>
+                </div>
+            </div>
+            <div class="team_block">
+                <div class="team_item">
+                    <img class="resolution_220-229" src="img/white.jpg" alt="">
+                    <div class="team_item_text">
+                        <h4 class="name">SEMF UCUK</h4>
+                        <h4 class="position">CED & FOUNDER</h4>
+                    </div>
+                </div>
+                <div class="team_item">
+                    <img class="resolution_220-229" src="img/white.jpg" alt="">
+                    <div class="team_item_text">
+                        <h4 class="name">DIK ADALIN</h4>
+                        <h4 class="position">ENGINEERING</h4>
+                    </div>
+                </div>
+                <div class="team_item">
+                    <img class="resolution_220-229" src="img/white.jpg" alt="">
+                    <div class="team_item_text">
+                        <h4 class="name">JENG KOL</h4>
+                        <h4 class="position">DESIGNER</h4>
+                    </div>
+                </div>
+                <div class="team_item">
+                    <img class="resolution_220-229" src="img/white.jpg" alt="">
+                    <div class="team_item_text">
+                        <h4 class="name">PET ROMAK</h4>
+                        <h4 class="position">MARKETING</h4>
+                    </div>
+                </div>
+            </div>
+            <div class="team_bottom_block">
+            	<p>Become part of our dream team, let’s join us ! </p>
+            	<a href="#" class="btn">WE ARE HIRING</a>
+            </div>
     </section>
     <link rel="stylesheet" href="css/main.min.css">
     <script src="js/scripts.min.js"></script>
