--- a/app/index.html
+++ b/app/index.html
@@ -166,10 +166,95 @@
                 </div>
             </div>
             <div class="team_bottom_block">
-            	<p>Become part of our dream team, let’s join us ! </p>
-            	<a href="#" class="btn">WE ARE HIRING</a>
+                <p>Become part of our dream team, let’s join us ! </p>
+                <a href="#" class="btn">WE ARE HIRING</a>
             </div>
     </section>
+    <section class="works white">
+        <div class="container">
+            <div class="row works_top">
+                <h2 class="title">OUR WORKS</h2>
+                <a class="dribbble" href="#">See All Projects in dribbble ></a>
+            </div>
+        </div>
+        <div class="works_examples-block">
+            <img src="img/gray-light.png" alt="" class="works_examples-block_item">
+            <img src="img/gray-middle.png" alt="" class="works_examples-block_item">
+            <img src="img/gray-middle-dark.png" alt="" class="works_examples-block_item">
+            <img src="img/gray-dark.png" alt="" class="works_examples-block_item">
+            <img src="img/gray-light.png" alt="" class="works_examples-block_item">
+            <img src="img/gray-middle.png" alt="" class="works_examples-block_item">
+            <img src="img/gray-middle.png" alt="" class="works_examples-block_item">
+            <img src="img/gray-light.png" alt="" class="works_examples-block_item">
+            <img src="img/gray-dark.png" alt="" class="works_examples-block_item">
+            <img src="img/gray-middle-dark.png" alt="" class="works_examples-block_item">
+            <img src="img/gray-middle.png" alt="" class="works_examples-block_item">
+            <img src="img/gray-light.png" alt="" class="works_examples-block_item">
+        </div>
+        <a href="#" class="btn btn-works">LOAD MORE</a>
+    </section>
+    <section class="testimonials purple" style="background:url(img/testimonials.jpg" )>
+        <div class="container">
+            <p class="quotes">“</p>
+            <div class="row">
+                <div class="col-md-10 col-md-offset-1 testimonials_text">
+                    This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non mauris vitae erat consequat auctor eu in elit.
+                </div>
+            </div>
+            <h4 class="name">JANE GALADRIEL</h4>
+            <h4 class="position">CEO TENGKUPER</h4>
+            <div class="face-carousel">
+                <i class="fa fa-angle-left" aria-hidden="true"></i>
+                <img src="img/testimonials/1.png" alt="#" class="face">
+                <img src="img/testimonials/2.png" alt="#" class="face">
+                <img src="img/testimonials/3 - active.png" alt="#" class="face">
+                <img src="img/testimonials/4.png" alt="#" class="face">
+                <img src="img/testimonials/5.png" alt="#" class="face">
+                <i class="fa fa-angle-right" aria-hidden="true"></i>
+            </div>
+        </div>
+    </section>
+    <section class="section client-form">
+        <div class="container">
+            <div class="row">
+                <article class="form-article">
+                    <div class="col-md-6">
+                        <h3 class="title">GIVE US A GOOD NEWS</h3>
+                        <form action="#" class="form">
+                            <input type="text" class="input name" placeholder="Name">
+                            <input type="text" class='input email' placeholder="Email">
+                            <input type="text" class='input subject' placeholder="Subject">
+                            <textarea class="message" cols="30" rows="10" placeholder="Your Message"></textarea>
+                            <submit class="btn btn-submit">SUBMIT</submit>
+                        </form>
+                    </div>
+                </article>
+                <article class="client">
+                    <div class="col-md-5 col-md-offset-1">
+                        <h3 class="title">OUR HAPPY CLIENT</h3>
+
+                        <div class="client-logos_block">
+                          <div class="block-left">
+                              <img src="img/client/zara.png" alt="Zara">
+                              <img src="img/client/barney.png" alt="Barneys NewYork">
+                              <img src="img/client/calvin.png" alt="Calvin Klein">
+                              <img src="img/client/converse.png" alt="Converse">
+                              <img src="img/client/levis.png" alt="Levi's">
+                          </div>
+                          <div class="block-right">
+                              <img src="img/client/mango.png" alt="Mango">
+                              <img src="img/client/gucci.png" alt="Gucci">
+                              <img src="img/client/barney.png" alt="Nike">
+                              <img src="img/client/puma.png" alt="Puma">
+                              <img src="img/client/billa.png" alt="BillaBong">
+                          </div>
+                        </div>
+                    </div>
+                </article>
+            </div>
+        </div>
+    </section>
+    
     <link rel="stylesheet" href="css/main.min.css">
     <script src="js/scripts.min.js"></script>
 </body>
