--- a/app/index.html
+++ b/app/index.html
@@ -232,29 +232,67 @@
                 <article class="client">
                     <div class="col-md-5 col-md-offset-1">
                         <h3 class="title">OUR HAPPY CLIENT</h3>
-
                         <div class="client-logos_block">
-                          <div class="block-left">
-                              <img src="img/client/zara.png" alt="Zara">
-                              <img src="img/client/barney.png" alt="Barneys NewYork">
-                              <img src="img/client/calvin.png" alt="Calvin Klein">
-                              <img src="img/client/converse.png" alt="Converse">
-                              <img src="img/client/levis.png" alt="Levi's">
-                          </div>
-                          <div class="block-right">
-                              <img src="img/client/mango.png" alt="Mango">
-                              <img src="img/client/gucci.png" alt="Gucci">
-                              <img src="img/client/barney.png" alt="Nike">
-                              <img src="img/client/puma.png" alt="Puma">
-                              <img src="img/client/billa.png" alt="BillaBong">
-                          </div>
+                            <div class="block-left">
+                                <img src="img/client/zara.png" alt="Zara">
+                                <img src="img/client/barney.png" alt="Barneys NewYork">
+                                <img src="img/client/calvin.png" alt="Calvin Klein">
+                                <img src="img/client/converse.png" alt="Converse">
+                                <img src="img/client/levis.png" alt="Levi's">
+                            </div>
+                            <div class="block-right">
+                                <img src="img/client/mango.png" alt="Mango">
+                                <img src="img/client/gucci.png" alt="Gucci">
+                                <img src="img/client/barney.png" alt="Nike">
+                                <img src="img/client/puma.png" alt="Puma">
+                                <img src="img/client/billa.png" alt="BillaBong">
+                            </div>
                         </div>
                     </div>
                 </article>
             </div>
         </div>
     </section>
-    
+    <footer class="footer purple" style="background: url(img/footer.jpg)">
+        <div class="container">
+            <div class="row content">
+                <div class="col-md-4">
+                    <img src="img/logo/logo-small.png" alt="Small logo" class="logo-small">
+                    <p class="description">lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh elit. Duis sed odio sit amet auctror a ornare odio non mauris vitae erat in elit</p>
+                </div>
+                <div class="col-md-4">
+                    <h3 class="title">OUR STUDIO</h3>
+                    <div class="adress">
+                        <img class="adress_icon" src="img/map-marker.png" alt="map-marker">
+                        <p class="adress_text">Ruko cucruk, Jl. Radio luar dalem jos No.12 - 13, Kalideres - Jakarta Barat 11480 - Indonesia</p>
+                    </div>
+                    <div class="phone">
+                        <img src="img/phone.png" alt="phone">
+                         <p class="phone_text">(+62) 21-2224 3333</p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <h3 class="title">STAY IN TOUCH</h3>
+                    <a href="#" class="btn subscribe">Subscribe our newsletter</a>
+                    <img src="img/paper-plane.png" alt="" class="paper-plane">
+                    <div class="social_block">
+                        <i class="fa fa-facebook" aria-hidden="true"></i>
+                        <i class="fa fa-twitter" aria-hidden="true"></i>
+                        <i class="fa fa-dribbble" aria-hidden="true"></i>
+                         <i class="fa fa-instagram" aria-hidden="true"></i>
+                           <i class="fa fa-google-plus" aria-hidden="true"></i>
+                           <i class="fa fa-youtube-play" aria-hidden="true"></i>
+                    </div>
+
+                </div>
+            </div>
+            <div class="consult">
+                <p class="consult-item">HELP</p>
+                <p class="consult-item">TERMS & CONDITION</p>
+                <p class="consult-item">PRIVACY</p>
+            </div>
+        </div>
+    </footer>
     <link rel="stylesheet" href="css/main.min.css">
     <script src="js/scripts.min.js"></script>
 </body>
