adaptive to 768px

--- a/app/index.html
+++ b/app/index.html
@@ -72,7 +72,7 @@
         <div class="container">
             <div class="row story_content ">
                 <div class="col-md-offset-1 col-md-3">
-                    <img src="img/logo/logo-big.png" alt="">
+                    <img class="big-logo" src="img/logo/logo-big.png" alt="">
                 </div>
                 <div class="col-md-offset-1 col-md-7 story_content_text">
                     <h2 class="title">OUR STORY</h2>
@@ -256,34 +256,37 @@
     <footer class="footer purple" style="background: url(img/footer.jpg)">
         <div class="container">
             <div class="row content">
-                <div class="col-md-4">
+                <div class="col-sm-4">
                     <img src="img/logo/logo-small.png" alt="Small logo" class="logo-small">
                     <p class="description">lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh elit. Duis sed odio sit amet auctror a ornare odio non mauris vitae erat in elit</p>
                 </div>
-                <div class="col-md-4">
+                <div class="col-sm-4">
                     <h3 class="title">OUR STUDIO</h3>
-                    <div class="adress">
-                        <img class="adress_icon" src="img/map-marker.png" alt="map-marker">
-                        <p class="adress_text">Ruko cucruk, Jl. Radio luar dalem jos No.12 - 13, Kalideres - Jakarta Barat 11480 - Indonesia</p>
-                    </div>
-                    <div class="phone">
-                        <img src="img/phone.png" alt="phone">
-                         <p class="phone_text">(+62) 21-2224 3333</p>
+                    <div class="contacts">
+                        <div class="adress">
+                            <img class="adress_icon" src="img/map-marker.png" alt="map-marker">
+                            <p class="adress_text">Ruko cucruk, Jl. Radio luar dalem jos No.12 - 13, Kalideres - Jakarta Barat 11480 - Indonesia</p>
+                        </div>
+                        <div class="phone">
+                            <img src="img/phone.png" alt="phone">
+                            <p class="phone_text">(+62) 21-2224 3333</p>
+                        </div>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-sm-4">
                     <h3 class="title">STAY IN TOUCH</h3>
-                    <a href="#" class="btn subscribe">Subscribe our newsletter</a>
-                    <img src="img/paper-plane.png" alt="" class="paper-plane">
-                    <div class="social_block">
-                        <i class="fa fa-facebook" aria-hidden="true"></i>
-                        <i class="fa fa-twitter" aria-hidden="true"></i>
-                        <i class="fa fa-dribbble" aria-hidden="true"></i>
-                         <i class="fa fa-instagram" aria-hidden="true"></i>
-                           <i class="fa fa-google-plus" aria-hidden="true"></i>
-                           <i class="fa fa-youtube-play" aria-hidden="true"></i>
+                    <div class="content_block">
+                        <a href="#" class="btn subscribe">Subscribe our newsletter</a>
+                        <img src="img/paper-plane.png" alt="" class="paper-plane">
+                        <div class="social_block">
+                            <i class="fa fa-facebook" aria-hidden="true"></i>
+                            <i class="fa fa-twitter" aria-hidden="true"></i>
+                            <i class="fa fa-dribbble" aria-hidden="true"></i>
+                            <i class="fa fa-instagram" aria-hidden="true"></i>
+                            <i class="fa fa-google-plus" aria-hidden="true"></i>
+                            <i class="fa fa-youtube-play" aria-hidden="true"></i>
+                        </div>
                     </div>
-
                 </div>
             </div>
             <div class="consult">
