finished the site

--- a/app/index.html
+++ b/app/index.html
@@ -39,13 +39,13 @@
                 </div>
                 <nav class="header-nav col-md-7 col-md-offset-3">
                     <ul>
-                        <li class='active'>HOME</li>
-                        <li>ABOUT</li>
-                        <li>EXPERTISE</li>
-                        <li>TEAMS</li>
-                        <li>WORKS</li>
-                        <li>PEOPLE SAY</li>
-                        <li>CONTACT</li>
+                        <li class='active'><a href="#">HOME</a></li>
+                        <li><a href="#">ABOUT</a></li>
+                        <li><a href="#">EXPERTISE</a></li>
+                        <li><a href="#">TEAMS</a></li>
+                        <li><a href="#">WORKS</a></li>
+                        <li><a href="#">PEOPLE SAY</a></li>
+                        <li><a href="#">CONTACT</a></li>
                     </ul>
                 </nav>
             </div>
@@ -84,10 +84,10 @@
         </div>
     </section>
     <section class="video purple dark" style="background: url(img/video.jpg)">
-        <div class="video-content">
+        <a class="video-content">
             <img class="play-icon" src="img/play.png" alt="">
             <p class="video-p">WATCH OUR HISTORY</p>
-        </div>
+        </a>
     </section>
     <section class="expertise white">
         <div class="container">
@@ -150,14 +150,14 @@
                         <h4 class="position">ENGINEERING</h4>
                     </div>
                 </div>
-                <div class="team_item">
+                <div class="team_item right">
                     <img class="resolution_220-229" src="img/white.jpg" alt="">
                     <div class="team_item_text">
                         <h4 class="name">JENG KOL</h4>
                         <h4 class="position">DESIGNER</h4>
                     </div>
                 </div>
-                <div class="team_item">
+                <div class="team_item right">
                     <img class="resolution_220-229" src="img/white.jpg" alt="">
                     <div class="team_item_text">
                         <h4 class="name">PET ROMAK</h4>
@@ -269,7 +269,7 @@
                         </div>
                         <div class="phone">
                             <img src="img/phone.png" alt="phone">
-                            <p class="phone_text">(+62) 21-2224 3333</p>
+                            <a href="call:+62212224333" class="phone_text">(+62) 21-2224 3333</a>
                         </div>
                     </div>
                 </div>
@@ -279,20 +279,20 @@
                         <a href="#" class="btn subscribe">Subscribe our newsletter</a>
                         <img src="img/paper-plane.png" alt="" class="paper-plane">
                         <div class="social_block">
-                            <i class="fa fa-facebook" aria-hidden="true"></i>
-                            <i class="fa fa-twitter" aria-hidden="true"></i>
-                            <i class="fa fa-dribbble" aria-hidden="true"></i>
-                            <i class="fa fa-instagram" aria-hidden="true"></i>
-                            <i class="fa fa-google-plus" aria-hidden="true"></i>
-                            <i class="fa fa-youtube-play" aria-hidden="true"></i>
+                            <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                            <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                            <a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a>
+                            <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                            <a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
+                            <a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="consult">
-                <p class="consult-item">HELP</p>
-                <p class="consult-item">TERMS & CONDITION</p>
-                <p class="consult-item">PRIVACY</p>
+                <a class="consult-item">HELP</a>
+                <a class="consult-item">TERMS & CONDITION</a>
+                <a class="consult-item">PRIVACY</a>
             </div>
         </div>
     </footer>
